# expert-umbrella

./: Pipfile  README.md  pyproject.toml
application/: decorators.py  settings.py  urls.py  views.py
application/docs/: about.md  privacy_policy.md
fixtures/: data.json
posts/: admin.py  forms.py  models.py  tag_css_class.txt  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_likepost.py  0003_post_author.py  0004_tag_post_date_created_post_tag.py  0005_post_cover_image_post_is_complete_post_is_draft.py  0006_remove_post_tag_post_tag.py  0007_alter_post_content_alter_post_is_draft.py  0008_post_likes_alter_post_content_alter_post_tag.py  0009_reportpost_alter_post_options_alter_post_content_and_more.py  0010_alter_reportpost_description_grouppost.py  0011_reportpost_report_name.py  0012_reportpost_is_read_alter_post_tag_and_more.py  0013_remove_grouppost_post_post_group_and_more.py  0014_commentpost.py  0015_alter_grouppost_owner.py  0016_alter_post_tag.py  0017_post_is_hide.py  0018_alter_post_is_hide_alter_tag_name.py  0019_alter_post_group.py  0020_post_is_nsfw.py  0021_alter_post_group.py  0022_alter_reportpost_user_reportcommentpost.py  0023_commentpost_date_created_commentpost_likes.py  0024_post_date_updated_alter_post_date_created.py  0025_reportcommentpost_description_and_more.py  0026_tag_css_class.py  0027_alter_tag_css_class.py  0028_alter_tag_css_class.py  (+33 more)
static/: custom.css  tag.css
templates/: base.html  generic.html  nav.html  notification.html  unconfirmed.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+55 files in other folders)
